# nixieclock

./: .gitignore  CMakeLists.txt  README.md  app.cpp  nclock.c  nixieclock.cpp  nixieclock.h  nixieclock.qrc  simplesquares.c
images/: WikipediaNixieDigit0.xpm  WikipediaNixieDigit1.xpm  WikipediaNixieDigit2.xpm  WikipediaNixieDigit3.xpm  WikipediaNixieDigit4.xpm  WikipediaNixieDigit5.xpm  WikipediaNixieDigit6.xpm  WikipediaNixieDigit7.xpm  WikipediaNixieDigit8.xpm  WikipediaNixieDigit9.xpm  readme.txt
